--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -22,6 +22,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
+            android:drawableLeft="@drawable/icon_refresh"
+            android:drawablePadding="5dp"
             android:fontFamily="sans-serif"
             android:gravity="center"
             android:padding="10dp"
