--- a/app/src/main/res/layout/post_recycler.xml
+++ b/app/src/main/res/layout/post_recycler.xml
@@ -27,6 +27,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:layout_toLeftOf="@id/btnPostDelete"
             android:layout_toRightOf="@id/profilePicLayout"
             android:orientation="vertical">
@@ -51,15 +52,6 @@
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/txtPostTime"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="5dp"
-                android:text="Time"
-                android:textColor="@color/black"
-                android:textSize="13sp" />
 
         </LinearLayout>
 
@@ -94,6 +86,17 @@
         android:padding="10dp"
         android:scaleType="centerInside"
         app:srcCompat="@drawable/icon_photo" />
+
+    <TextView
+        android:id="@+id/txtPostTime"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:gravity="right"
+        android:paddingLeft="5dp"
+        android:text="Time"
+        android:textColor="@color/black"
+        android:textSize="13sp" />
 
     <View
         android:id="@+id/divider9"
