--- a/app/src/main/res/layout/recent_chat_recycler.xml
+++ b/app/src/main/res/layout/recent_chat_recycler.xml
@@ -17,12 +17,26 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_vertical"
         android:orientation="vertical">
 
-        <RelativeLayout
+        <TextView
+            android:id="@+id/lastMsgtimeTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="2dp"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            tools:text="10:00" />
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/fullNameTxt"
@@ -36,22 +50,13 @@
                 tools:text="Name" />
 
             <TextView
-                android:id="@+id/lastMsgtimeTxt"
+                android:id="@+id/lastMsgTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/fullNameTxt"
-                android:layout_centerVertical="true"
+                android:layout_marginTop="5dp"
                 android:textColor="@color/black"
-                android:textSize="12sp"
-                tools:text="10:00" />
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/lastMsgTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:textColor="@color/black"
-            tools:text="Last Message" />
+                tools:text="Last Message" />
+        </LinearLayout>
     </LinearLayout>
+
 </LinearLayout>
