--- a/app/src/main/res/layout/post_recycler.xml
+++ b/app/src/main/res/layout/post_recycler.xml
@@ -87,16 +87,47 @@
         android:scaleType="centerInside"
         app:srcCompat="@drawable/icon_photo" />
 
-    <TextView
-        android:id="@+id/txtPostTime"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="10dp"
-        android:gravity="right"
-        android:paddingLeft="5dp"
-        android:text="Time"
-        android:textColor="@color/black"
-        android:textSize="13sp" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txtPostLike"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:text="likes"
+            android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/txtPostTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:gravity="right"
+            android:paddingLeft="5dp"
+            android:text="Time"
+            android:textColor="@color/black"
+            android:textSize="13sp" />
+
+    </LinearLayout>
+
+
+    <View
+        android:id="@+id/divider14"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="5dp"
+        android:background="?android:attr/listDivider" />
+
+    <ImageButton
+        android:id="@+id/btnPostLike"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:contentDescription="like"
+        android:src="@drawable/icon_like" />
 
     <View
         android:id="@+id/divider9"
