--- a/app/src/main/res/layout/recent_chat_recycler.xml
+++ b/app/src/main/res/layout/recent_chat_recycler.xml
@@ -2,61 +2,56 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="82dp"
     android:layout_margin="10dp"
     android:background="@drawable/text_rounded_corner"
     android:backgroundTint="@color/background"
-    android:elevation="5dp">
+    android:elevation="5dp"
+    android:gravity="center">
 
     <include
         layout="@layout/profile_pic"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_gravity="center" />
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_margin="10dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/lastMsgtimeTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="2dp"
-            android:textColor="@color/black"
-            android:textSize="12sp"
-            tools:text="10:00" />
-
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/fullNameTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:layout_toLeftOf="@id/lastMsgtimeTxt"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 tools:text="Name" />
 
             <TextView
-                android:id="@+id/lastMsgTxt"
+                android:id="@+id/lastMsgtimeTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="10dp"
                 android:textColor="@color/black"
-                tools:text="Last Message" />
-        </LinearLayout>
+                android:textSize="12sp"
+                tools:text="time" />
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/lastMsgTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            tools:text="Last Message" />
     </LinearLayout>
 
 </LinearLayout>
